# text2sql

./: LICENSE  README.md  main.py  prd.md  pyproject.toml  requirements.txt
data/: products.csv  sales.csv
src/text2sql_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
